# stars_fetcher

./: Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs
src/api/: client.rs  mod.rs  repos.rs  stars.rs
src/config/: config.rs
src/ui/: selector.rs
