[package]
name = "starts_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prettytable-rs = "0.10"
dirs = "6.0.0"
toml = "0.8.20"
console = "0.15"
dialoguer = "0.11.0"
indicatif = "0.17.7"


[dev-dependencies]
tempfile = "3.8"
mockito = "1.7.0"